# impipes

./: .gitignore  README.md  filters.py  mkdocs.yml  pipes.py  pyproject.toml
docs/: example1.py  example2.py  example3.py  example4.py  index.md  license.md
docs/user-guide/: pipes.md
impipes/: __init__.py  filters.py  pipes.py  utils.py
tests/: __init__.py  test_impipes.py
